--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^3.15.0",
     "@emotion/react": "^11.14.0",
     "axios": "^1.8.4",
+    "dayjs": "^1.11.13",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
